--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ body {
 
     border-style: solid;
     border-width: 5px;
+
+    cursor: pointer;
 }
 #top-right {
     position: absolute;
@@ -71,6 +73,8 @@ body {
 
     border-style: solid;
     border-width: 5px;
+
+    cursor: pointer;
 }
 
 #bottom-left {
@@ -86,6 +90,8 @@ body {
 
     border-style: solid;
     border-width: 5px;
+
+    cursor: pointer;
 }
 
 #botom-right {
@@ -101,6 +107,8 @@ body {
 
     border-style: solid;
     border-width: 5px;
+
+    cursor: pointer;
 }
 
 #inner-circle {
@@ -134,6 +142,7 @@ body {
 .toggle {
     margin-left: 20px;
     margin-right: 20px;
+    cursor: pointer;
 }
 
 .button {
@@ -141,6 +150,7 @@ body {
     font-size: 1.5em;
     background-color: lightgrey;
     width: 70px;
+    cursor: pointer;
 }
 
 #switches {
